--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -108,7 +108,7 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "    .astype(int)\n",
         ")"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "# so convert it from a number to a string\n",
         "df['BOROUGH'] = df['BOROUGH'].astype(str)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
         "# replace the neighborhood with 'OTHER'\n",
         "df.loc[~df['NEIGHBORHOOD'].isin(top10), 'NEIGHBORHOOD'] = 'OTHER'"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -185,13 +185,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 479
         },
-        "outputId": "56554642-8b05-45cc-9546-32dd621c0106"
+        "outputId": "795f4dac-6d1c-420e-e2ac-d72500eadce3"
       },
       "source": [
         "# Take a look at the data\n",
         "df.tail()"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -395,7 +395,7 @@
         "# Convert the SALE_DATE to datetime format\n",
         "df['SALE_DATE'] = pd.to_datetime(df['SALE_DATE'])"
       ],
-      "execution_count": 8,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -412,8 +412,126 @@
         "# Create the test data\n",
         "test = df[df['SALE_DATE'].dt.month == 4]"
       ],
-      "execution_count": 12,
+      "execution_count": 30,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7v65Mf5U7qdB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "bb372277-e9ea-40de-cd6f-2de160ef5c69"
+      },
+      "source": [
+        "train['TAX_CLASS_AT_PRESENT'].value_counts()"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1     8911\n",
+              "2     6255\n",
+              "4     1258\n",
+              "2A     588\n",
+              "2C     464\n",
+              "1A     289\n",
+              "1B     209\n",
+              "2B     128\n",
+              "1D      34\n",
+              "1C      31\n",
+              "Name: TAX_CLASS_AT_PRESENT, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fJ3zQCnOgLN0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 493
+        },
+        "outputId": "9d195bd0-1598-442f-8581-fec1bcc73dc2"
+      },
+      "source": [
+        "#  one-hot encoding\n",
+        "# Imports\n",
+        "import numpy as np\n",
+        "\n",
+        "# Select and reshape input array\n",
+        "train = train.NEIGHBORHOOD[:, np.newaxis]\n",
+        "test = test.NEIGHBORHOOD[:, np.newaxis]\n",
+        "\n",
+        "# Import the encoder\n",
+        "#from sklearn.preprocessing import OneHotEncoder\n",
+        "import category_encoders as ce\n",
+        "\n",
+        "# Instantiate the encoder as an object\n",
+        "#enc = OneHotEncoder(sparse=False)\n",
+        "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
+        "\n",
+        "# Use the fit_transform method (2 steps in 1)\n",
+        "onehot1 = encoder.fit_transform(train)\n",
+        "onehot2 = encoder.fit_transform(test)\n",
+        "\n",
+        "# Display every 25th row\n",
+        "onehot1[::10], onehot2[::10]"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(       0_OTHER  0_UPPER EAST SIDE (59-79)  ...  0_FLUSHING-NORTH  0_GRAMERCY\n",
+              " 0            1                          0  ...                 0           0\n",
+              " 10           1                          0  ...                 0           0\n",
+              " 20           1                          0  ...                 0           0\n",
+              " 30           1                          0  ...                 0           0\n",
+              " 40           1                          0  ...                 0           0\n",
+              " ...        ...                        ...  ...               ...         ...\n",
+              " 18120        1                          0  ...                 0           0\n",
+              " 18130        1                          0  ...                 0           0\n",
+              " 18140        1                          0  ...                 0           0\n",
+              " 18150        1                          0  ...                 0           0\n",
+              " 18160        0                          0  ...                 0           0\n",
+              " \n",
+              " [1817 rows x 11 columns],\n",
+              "       0_OTHER  0_GRAMERCY  ...  0_FLUSHING-NORTH  0_FOREST HILLS\n",
+              " 0           1           0  ...                 0               0\n",
+              " 10          1           0  ...                 0               0\n",
+              " 20          1           0  ...                 0               0\n",
+              " 30          1           0  ...                 0               0\n",
+              " 40          0           0  ...                 0               0\n",
+              " ...       ...         ...  ...               ...             ...\n",
+              " 4830        1           0  ...                 0               0\n",
+              " 4840        0           0  ...                 0               1\n",
+              " 4850        1           0  ...                 0               0\n",
+              " 4860        1           0  ...                 0               0\n",
+              " 4870        1           0  ...                 0               0\n",
+              " \n",
+              " [488 rows x 11 columns])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -424,7 +542,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "17e54803-c89c-4934-f81c-846144e3aa41"
+        "outputId": "5e933a23-2d27-437c-9de1-97cd01a52248"
       },
       "source": [
         "# Create the target and features for train data\n",
@@ -450,7 +568,7 @@
         "print(X1_train.shape)\n",
         "print(y1_train.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,84 +611,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fJ3zQCnOgLN0",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 493
-        },
-        "outputId": "9856fd5f-1e32-460e-bae2-2c90b12eed1b"
-      },
-      "source": [
-        "#  one-hot encoding\n",
-        "# Imports\n",
-        "import numpy as np\n",
-        "\n",
-        "# Select and reshape input array\n",
-        "train = train.NEIGHBORHOOD[:, np.newaxis]\n",
-        "test = test.NEIGHBORHOOD[:, np.newaxis]\n",
-        "\n",
-        "# Import the encoder\n",
-        "from sklearn.preprocessing import OneHotEncoder\n",
-        "import category_encoders as ce\n",
-        "\n",
-        "# Instantiate the encoder as an object\n",
-        "enc = OneHotEncoder(sparse=False)\n",
-        "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
-        "\n",
-        "# Use the fit_transform method (2 steps in 1)\n",
-        "onehot1 = encoder.fit_transform(train)\n",
-        "onehot2 = encoder.fit_transform(test)\n",
-        "\n",
-        "# Display every 25th row\n",
-        "onehot1[::10], onehot2[::10]"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(       0_OTHER  0_UPPER EAST SIDE (59-79)  ...  0_FLUSHING-NORTH  0_GRAMERCY\n",
-              " 0            1                          0  ...                 0           0\n",
-              " 10           1                          0  ...                 0           0\n",
-              " 20           1                          0  ...                 0           0\n",
-              " 30           1                          0  ...                 0           0\n",
-              " 40           1                          0  ...                 0           0\n",
-              " ...        ...                        ...  ...               ...         ...\n",
-              " 18120        1                          0  ...                 0           0\n",
-              " 18130        1                          0  ...                 0           0\n",
-              " 18140        1                          0  ...                 0           0\n",
-              " 18150        1                          0  ...                 0           0\n",
-              " 18160        0                          0  ...                 0           0\n",
-              " \n",
-              " [1817 rows x 11 columns],\n",
-              "       0_OTHER  0_GRAMERCY  ...  0_FLUSHING-NORTH  0_FOREST HILLS\n",
-              " 0           1           0  ...                 0               0\n",
-              " 10          1           0  ...                 0               0\n",
-              " 20          1           0  ...                 0               0\n",
-              " 30          1           0  ...                 0               0\n",
-              " 40          0           0  ...                 0               0\n",
-              " ...       ...         ...  ...               ...             ...\n",
-              " 4830        1           0  ...                 0               0\n",
-              " 4840        0           0  ...                 0               1\n",
-              " 4850        1           0  ...                 0               0\n",
-              " 4860        1           0  ...                 0               0\n",
-              " 4870        1           0  ...                 0               0\n",
-              " \n",
-              " [488 rows x 11 columns])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "KEYe3YxA0Q4X",
         "colab_type": "code",
         "colab": {
@@ -607,7 +647,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 374
         },
-        "outputId": "3beb6259-4790-4fa5-b197-06a664c1dc5d"
+        "outputId": "316fade1-cd8a-4117-e2a3-2fea7edd1ea5"
       },
       "source": [
         "# SelectKBest\n",
@@ -627,7 +667,7 @@
         "\n",
         "print('The selected feature: ', selected_feature[0])"
       ],
-      "execution_count": 14,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "error",
@@ -636,7 +676,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-4f81728dc9a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Run the selector on the training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mX_train_selected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX1_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my1_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Find the features that was selected\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-28-4f81728dc9a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Run the selector on the training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mX_train_selected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mselector\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX1_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my1_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Find the features that was selected\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/base.py\u001b[0m in \u001b[0;36mfit_transform\u001b[0;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[1;32m    572\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m             \u001b[0;31m# fit method of arity 2 (supervised transformation)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 574\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mfit_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    575\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    576\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/feature_selection/_univariate_selection.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y)\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0mself\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    340\u001b[0m         \"\"\"\n\u001b[0;32m--> 341\u001b[0;31m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'csc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    342\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    343\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore_func\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    753\u001b[0m                     \u001b[0mensure_min_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mensure_min_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    754\u001b[0m                     \u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 755\u001b[0;31m                     estimator=estimator)\n\u001b[0m\u001b[1;32m    756\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    757\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
