--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# Regression 1\n",
     "\n",
-    "## Assignment\n",
+    "## Assignment - - \n",
     "\n",
     "You'll use another **New York City** real estate dataset. \n",
     "\n",
@@ -121,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6rc1"
   }
  },
  "nbformat": 4,
