--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -747,6 +747,69 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "VKne3WyMyYz-",
+        "outputId": "e4b23233-6f47-4a41-c8a5-5ceb14aaa1c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# Baseline model\n",
+        "dt['price'].mean()"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3575.604007034292"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lCC3SoBSyiFY",
+        "outputId": "9cace8e0-3123-48db-f264-47852b8a52e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# Look at baseline mean_absolute_error\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "y_pred = [dt['price'].mean()] * len(dt['price'])\n",
+        "mean_absolute_error(dt['price'], y_pred)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1201.8811133682555"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "VS2gwOGrrKvN"
       },
       "source": [
