--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -758,7 +758,7 @@
         "# Baseline model\n",
         "dt['price'].mean()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +791,7 @@
         "y_pred = [dt['price'].mean()] * len(dt['price'])\n",
         "mean_absolute_error(dt['price'], y_pred)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1459,7 +1459,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "2rT9JZIN10Qg",
-        "outputId": "cba3a3d4-0f45-41bd-e140-35650040dee1",
+        "outputId": "7075867e-559e-4e5b-8f60-a227d6678b6e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1477,7 +1477,7 @@
         "# Fit model\n",
         "model.fit(X_train_app, y_train_app)"
       ],
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1489,7 +1489,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 63
         }
       ]
     },
@@ -1497,7 +1497,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "9yPvR4lu3S4J",
-        "outputId": "caf97f4b-ac25-4ac2-9e45-7e5101793012",
+        "outputId": "98d3c221-d238-49fc-ee03-f93f9e4c234b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -1508,7 +1508,7 @@
         "print(model.coef_)\n",
         "print(model.intercept_)"
       ],
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -1529,7 +1529,7 @@
         "# Import the metrics for the statistical tests\n",
         "from sklearn import metrics"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -1543,7 +1543,7 @@
         "# Separate X and y\n",
         "X_test_app = dtr[features]"
       ],
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": []
     },
     {
@@ -1555,14 +1555,14 @@
         "# Make array of predictions\n",
         "y_predict = model.predict(X_test_app)"
       ],
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ItLJxk7A3uuJ",
-        "outputId": "4d7ad8ca-aca5-498c-82e0-71b3ab87cf1b",
+        "outputId": "b8ae8e02-83f3-4a1c-b008-0f741f1811e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1572,7 +1572,7 @@
         "# Mean squared error of prediction and estimated\n",
         "metrics.mean_squared_error(dtr['price'], y_predict)"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1584,7 +1584,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 68
         }
       ]
     },
@@ -1592,7 +1592,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "5t4Ukcxe4eUB",
-        "outputId": "21a8d231-2c69-4067-a90d-6d5d7e0a8ae2",
+        "outputId": "343ccde4-261c-4cde-ba49-40ff17b96fc8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1602,7 +1602,7 @@
         "# Mean absolute error of prediction and estimated\n",
         "metrics.mean_absolute_error(dtr['price'], y_predict)"
       ],
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1614,7 +1614,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 69
         }
       ]
     },
@@ -1622,7 +1622,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "iRv7tUv74uF5",
-        "outputId": "7c8d3767-33d2-4d5d-8ccb-2b1afc5b262c",
+        "outputId": "ba97f65b-abc2-4478-ad7b-5a827de14c68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1632,7 +1632,7 @@
         "# R^2 score of prediction and estimated\n",
         "metrics.r2_score(dtr['price'], y_predict)"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1644,14 +1644,326 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 70
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HhGhBSqD40Y_"
+        "id": "ijxDZC8QAHWO"
+      },
+      "source": [
+        "# Make test feature matrix\n",
+        "features = ['cats_n_dogs', 'interest_numerical']\n",
+        "# Separate X and y\n",
+        "X_train_app = dt[features]"
+      ],
+      "execution_count": 71,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4GupyzAYAELm"
+      },
+      "source": [
+        "y_predictr = model.predict(X_train_app)"
+      ],
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HhGhBSqD40Y_",
+        "outputId": "28fc4fd5-217d-45c7-8a81-7041d1325323",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 70
+        }
+      },
+      "source": [
+        "# Same metrics but for training data\n",
+        "\n",
+        "print(\"Mean Squared Error: \", metrics.mean_squared_error(dt['price'], y_predictr))\n",
+        "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(dt['price'], y_predictr))\n",
+        "print(\"R^2 Score: \", metrics.r2_score(dt['price'], y_predictr))"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mean Squared Error:  2971627.2578008412\n",
+            "Mean Absolute Error:  1175.4339259245974\n",
+            "R^2 Score:  0.042962881728977886\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BDoDWDPqQIKc",
+        "outputId": "97c0377c-d335-4695-d510-0ef841098546",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        }
+      },
+      "source": [
+        "dt.columns"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['bathrooms', 'bedrooms', 'created', 'description', 'display_address',\n",
+              "       'latitude', 'longitude', 'price', 'street_address', 'interest_level',\n",
+              "       'elevator', 'cats_allowed', 'hardwood_floors', 'dogs_allowed',\n",
+              "       'doorman', 'dishwasher', 'no_fee', 'laundry_in_building',\n",
+              "       'fitness_center', 'pre-war', 'laundry_in_unit', 'roof_deck',\n",
+              "       'outdoor_space', 'dining_room', 'high_speed_internet', 'balcony',\n",
+              "       'swimming_pool', 'new_construction', 'terrace', 'exclusive', 'loft',\n",
+              "       'garden_patio', 'wheelchair_access', 'common_outdoor_space',\n",
+              "       'cats_n_dogs', 'interest_numerical', 'ammenities'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 74
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cXt6-Zu-Qf3R"
+      },
+      "source": [
+        "# Stretch Goal\n",
+        "\n",
+        "Now that we've completed the assignment, we'll try to minimize our MAE by adding some new engineered features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O7RskLCM_-iJ"
+      },
+      "source": [
+        "# Conditions for bathrooms and bedrooms\n",
+        "def bath_beds(x):\n",
+        "  return x['bathrooms'] + x['bedrooms']"
+      ],
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xrFDYV3mQTmU"
+      },
+      "source": [
+        "dt['baths_n_beds'] = dt.apply(bath_beds, axis=1)\n",
+        "dtr['baths_n_beds'] = dtr.apply(bath_beds, axis=1)"
+      ],
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "59L7suXWQXl1"
+      },
+      "source": [
+        "# Conditions for ammenities\n",
+        "def ammenities(x):\n",
+        "  count = 0\n",
+        "  if x['dishwasher'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['no_fee'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['laundry_in_building'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['fitness_center'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['laundry_in_unit'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['roof_deck'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['outdoor_space'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['dining_room'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['high_speed_internet'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['balcony'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['swimming_pool'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['new_construction'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['terrace'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['exclusive'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['loft'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['garden_patio'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['wheelchair_access'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  if x['common_outdoor_space'] > 0:\n",
+        "    count += 1\n",
+        "  else:\n",
+        "    pass\n",
+        "  return count"
+      ],
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RGHLbeBiQ_aP"
+      },
+      "source": [
+        "dt['ammenities'] = dt.apply(ammenities, axis=1)\n",
+        "dtr['ammenities'] = dtr.apply(ammenities, axis=1)"
+      ],
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xO_VLw78Q_yX",
+        "outputId": "c8f29bd5-8e34-449d-d857-1911eb5c592b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# Make features\n",
+        "features = ['cats_n_dogs', 'interest_numerical', 'baths_n_beds', 'ammenities']\n",
+        "# Separate X and y\n",
+        "X_train_app = dt[features]\n",
+        "y_train_app = dt['price']\n",
+        "# Import model, make model\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "model = LinearRegression()\n",
+        "# Fit model\n",
+        "model.fit(X_train_app, y_train_app)"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LU_Bx8_QRLFk"
+      },
+      "source": [
+        "# Establish test section of the dataset\n",
+        "X_test_app = dtr[features]"
+      ],
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UYKXSqibRg-y"
+      },
+      "source": [
+        "y_pre = model.predict(X_test_app)"
+      ],
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TqmwC1WfRihg",
+        "outputId": "2779f1cd-039e-4a22-b7da-10a290678140",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "print(\"Mean Absolute Error: \", metrics.mean_absolute_error(dtr['price'], y_pre))"
+      ],
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mean Absolute Error:  828.0863803820372\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oxHom-LURoFq"
       },
       "source": [
         ""
